openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cinematch-route
spec:
  to:
    kind: Service
    name: cinematch-service
  port:
    targetPort: 80
  wildcardPolicy: None
